vzutil/iptables.out
*filter
-N ACCOUNT
#HOST IP TRAFFIC ACCOUNTING

-A INPUT -d 208.64.38.99 -j ACCOUNT
-A OUTPUT -s 208.64.38.99 -j ACCOUNT

#DENY ACCESS TO OTHER NOST NODE(S)

-A FORWARD -d 208.64.38.98 -j DROP

#DENY ACCESS TO INTERNAL NETWORK

-A INPUT -s 208.64.38.96/27 -d 192.168.1.0/24 -j DROP
-A FORWARD -d 192.168.1.0/24 -j DROP

#VZ IP TRAFFIC ACCOUNTING

-A FORWARD -s 208.64.38.101 -j ACCOUNT
-A FORWARD -d 208.64.38.101 -j ACCOUNT

-A FORWARD -s 208.64.38.102 -j ACCOUNT
-A FORWARD -d 208.64.38.102 -j ACCOUNT

-A FORWARD -s 208.64.38.103 -j ACCOUNT
-A FORWARD -d 208.64.38.103 -j ACCOUNT

-A FORWARD -s 208.64.38.104 -j ACCOUNT
-A FORWARD -d 208.64.38.104 -j ACCOUNT

-A FORWARD -s 208.64.38.105 -j ACCOUNT
-A FORWARD -d 208.64.38.105 -j ACCOUNT

-A FORWARD -s 208.64.38.106 -j ACCOUNT
-A FORWARD -d 208.64.38.106 -j ACCOUNT

-A FORWARD -s 208.64.38.107 -j ACCOUNT
-A FORWARD -d 208.64.38.107 -j ACCOUNT

-A FORWARD -s 208.64.38.108 -j ACCOUNT
-A FORWARD -d 208.64.38.108 -j ACCOUNT

-A FORWARD -s 208.64.38.109 -j ACCOUNT
-A FORWARD -d 208.64.38.109 -j ACCOUNT

-A FORWARD -s 208.64.38.110 -j ACCOUNT
-A FORWARD -d 208.64.38.110 -j ACCOUNT

-A FORWARD -s 208.64.38.111 -j ACCOUNT
-A FORWARD -d 208.64.38.111 -j ACCOUNT

-A FORWARD -s 208.64.38.112 -j ACCOUNT
-A FORWARD -d 208.64.38.112 -j ACCOUNT

-A FORWARD -s 208.64.38.113 -j ACCOUNT
-A FORWARD -d 208.64.38.113 -j ACCOUNT

-A FORWARD -s 208.64.38.114 -j ACCOUNT
-A FORWARD -d 208.64.38.114 -j ACCOUNT

-A FORWARD -s 208.64.38.115 -j ACCOUNT
-A FORWARD -d 208.64.38.115 -j ACCOUNT

-A FORWARD -s 208.64.38.116 -j ACCOUNT
-A FORWARD -d 208.64.38.116 -j ACCOUNT

-A FORWARD -s 208.64.38.117 -j ACCOUNT
-A FORWARD -d 208.64.38.117 -j ACCOUNT

-A FORWARD -s 208.64.38.118 -j ACCOUNT
-A FORWARD -d 208.64.38.118 -j ACCOUNT

-A FORWARD -s 208.64.38.119 -j ACCOUNT
-A FORWARD -d 208.64.38.119 -j ACCOUNT

-A FORWARD -s 208.64.38.120 -j ACCOUNT
-A FORWARD -d 208.64.38.120 -j ACCOUNT

-A FORWARD -s 208.64.38.121 -j ACCOUNT
-A FORWARD -d 208.64.38.121 -j ACCOUNT

-A FORWARD -s 208.64.38.122 -j ACCOUNT
-A FORWARD -d 208.64.38.122 -j ACCOUNT

-A FORWARD -s 208.64.38.123 -j ACCOUNT
-A FORWARD -d 208.64.38.123 -j ACCOUNT

-A FORWARD -s 208.64.38.124 -j ACCOUNT
-A FORWARD -d 208.64.38.124 -j ACCOUNT

-A FORWARD -s 208.64.38.125 -j ACCOUNT
-A FORWARD -d 208.64.38.125 -j ACCOUNT

-A FORWARD -s 208.64.38.126 -j ACCOUNT
-A FORWARD -d 208.64.38.126 -j ACCOUNT

-A FORWARD -s 208.64.38.127 -j ACCOUNT
-A FORWARD -d 208.64.38.127 -j ACCOUNT

#ALLOW ACCESS TO HOST NODE

-A INPUT -s ! 208.64.38.96/27 -d 208.64.38.99 -p tcp --dport 2292 -j ACCEPT
-A INPUT -d 208.64.38.99 -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -d 208.64.38.99 -j DROP


#OPENING SPECIFIC PORTS

-A FORWARD -d 208.64.38.101 -p tcp --dport 53 -j ACCEPT
-A FORWARD -d 208.64.38.101 -p udp --dport 53 -j ACCEPT
-A FORWARD -d 208.64.38.101 -m state --state ESTABLISHED,RELATED -j ACCEPT
-A FORWARD -d 208.64.38.101 -j DROP

-A FORWARD -d 208.64.38.104 -p tcp --dport 80 -j ACCEPT
-A FORWARD -d 208.64.38.104 -p tcp --dport 443 -j ACCEPT
-A FORWARD -d 208.64.38.104 -p tcp --dport 10000 -j ACCEPT
-A FORWARD -d 208.64.38.104 -p tcp --dport 2292 -j ACCEPT
-A FORWARD -d 208.64.38.104 -m state --state ESTABLISHED,RELATED -j ACCEPT
-A FORWARD -d 208.64.38.104 -j DROP


COMMIT
